1.5.7.8 (Try to fix music on iOS 3/?)

--- a/css/ArcadeTheme.css
+++ b/css/ArcadeTheme.css
@@ -19,6 +19,7 @@
 html {
   min-height: 100%;
   box-sizing: border-box;
+  cursor: pointer;
 }
 
 body {
